bug fix out of bounds; paus game added; instructions text

--- a/snake-game/src/App.css
+++ b/snake-game/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .app {
   position: relative;
 	display: flex;
@@ -9,36 +15,39 @@
 }
 
 .title {
-  font-size: 1.5em;
+  font-size: 3em;
   text-align: center;
   color: darkslategrey;
 }
 
 .box {
   display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .content {
-  font-size: 1em;
+  font-size: 2em;
+  padding: 1.3em;
   text-align: center;
   color: darkslategrey;
 }
 
 .wrapper {
   position: relative;
-  height: 480px;
-  width: 480px;
-  background: darkslategrey;
+  padding: 16px 16px;
+  height: 640px;
+  width: 640px;
+  background: darkslategrey; 
 }
 
 .button {
   color: teal;
-  font-size: 1em;
+  font-size: 1.8em;
   margin: 1em;
   padding: 0.25em 1em;
   border: 2px solid teal;
   border-radius: 3px;
-  float: right;
 }
 
 .food-item {
@@ -56,4 +65,35 @@
 	width: 32px;
 	background: mediumseagreen;
   z-index: 2;
+}
+
+.instructions {
+  font-size: 1.3em;
+  padding: 1.5em;
+  text-align: center;
+  width: 640px;
+  background-color: rgb(136, 207, 168);
+  border-radius: 15px;
+}
+
+.key-symbol {
+  box-sizing: border-box;
+  line-height: 0.1em;
+  padding: 1em;
+  font-size: 22px;
+  text-align: center;
+  color: #555;
+  cursor: pointer;
+  margin: 0 8px;
+  height: 1.5em;
+  border-color: #f2f2f2;
+  border-style: solid;
+  text-shadow: 0 0.5px 1px #777, 0 2px 6px #f2f2f2;
+  border-width: 1px;
+  border-radius: 10px;
+  background: -webkit-linear-gradient(top, #f9f9f9 0%, #D2D2D2 80%, #c0c0c0 100%);
+  font-family: sans-serif;
+  display: inline-block;
+  transition: box-shadow 0.3s ease, transform 0.15s ease;
+  box-shadow: 0 0 1px #888,0 1px 0 #fff, 0 6px 0 #C0C0C0, 0 8px 17px rgba(#444, 0.4), 2px 1px 4px rgba(#444, 0.25), -2px 1px 4px rgba(#444, 0.25), 0 9px 16px rgba(#444, 0.1);
 }
